<resources>
    <string name="app_name">Coisos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_file_rpg">File Rpg</string>
    <string name="menu_account">Account</string>

    <string name="input_username">Type your name</string>
    <string name="input_cpf">Type your cpf</string>
    <string name="input_email">Type your email</string>
    <string name="input_password">Type your password</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Log out</string>

    <string name="don_t_have_account">Don\'t have account? <b>Register</b></string>
    <string name="have_account">Already have account? <b>Login</b></string>
    <string name="welcome_back">Welcome back to <b>Coisos</b></string>
    <string name="welcome">Welcome to <b>Coisos</b></string>
    <string name="button_loggout">Button loggout</string>
</resources>