<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_file_rpg"
            android:icon="@drawable/baseline_file_open_24"
            android:title="@string/menu_file_rpg" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/logout"
            />
    </group>
</menu>